<resources>
    <string name="app_name">SearchBookYandexMap</string>
    <string name="show_me">Show Me</string>
    <string name="show_now_address">show now address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Поиск</string>
    <string name="map">Карта</string>
    <string name="addresses">Addresses</string>
    <string name="profile">Profile</string>
    <string name="address_example">Государственый музей истории Тимуридов</string>
    <string name="example_distance">650m</string>
    <string name="example_subtitle">Музей, улица Амира Темура, 1</string>
    <string name="bottom_title_example">Государственный музей искусств Узбекистана</string>
    <string name="bottom_sub_title_example">Музей, Развлечения</string>
    <string name="rating_bottom_example">4.9</string>
    <string name="example_review_txt">21 отзыв</string>
    <string name="review_txt">отзыв</string>
    <string name="example_txt_closed_time">Открыто до 17:00</string>
    <string name="example_btn_add_address">Добавить адрес в избранное</string>
    <string name="add_address_title">Добавить адрес в избранное</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="delete_all">delete all</string>
    <string name="my_addresses">Мои адреса</string>
    <string name="would_you_like_to_delete_this_address">Вы хотите удалить этот адрес?</string>
    <string name="delete">Удалить</string>
    <string name="yandex_search">Yandex Поиск</string>
</resources>