<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="13dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="13dp"
    android:paddingBottom="14dp"
    android:background="@drawable/back_dialog_add"
    android:minHeight="80dp">

    <TextView
        android:id="@+id/txt_close_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/gilroy_light"
        android:paddingTop="4dp"
        android:textSize="@dimen/bottom_sub_title_size"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/txt_score"
        app:layout_constraintStart_toEndOf="@+id/rating_v"
        app:layout_constraintTop_toTopOf="@+id/txt_score"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/example_txt_closed_time" />

    <RatingBar
        android:id="@+id/rating_v"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:progressTint="@color/color_subTitle_bottom"
        android:rating="4.5"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/txt_score"
        app:layout_constraintStart_toEndOf="@+id/txt_score" />

    <TextView
        android:id="@+id/txt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/gilroy_light"
        android:paddingTop="4dp"
        android:textColor="@color/color_subTitle_bottom"
        android:textSize="@dimen/bottom_score_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtitle"
        tools:text="@string/rating_bottom_example" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:src="@drawable/ic_love_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/gilroy_light"
        android:maxWidth="200dp"
        android:text="@string/address_example"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gilroy_light"
        android:text="@string/example_subtitle"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />


</androidx.constraintlayout.widget.ConstraintLayout>